Fixed a bug causing scrollbars to appear when zooming in Need to make zooming center on mouse, which likely involves maths

--- a/main.css
+++ b/main.css
@@ -36,6 +36,12 @@ canvas#ui {
   width: 100%;
   height: 100%;
 }
+.buttons {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 .action-buttons {
   z-index: 3;
   position: absolute;
